# macmodes

./: .gitignore  README  pyproject.toml
docs/: petsc_reconfigure.py  slepc_reconfigure.py
runs/buffet_brscale/l-2_nr-200/: solver_config.py
runs/buffet_brscale/l-2_nr-200/npzfiles/: run_config.npz
runs/buffet_brscale/per10/: solver_config.py
runs/buffet_brscale/per15/npzfiles/: modes.npz  run_config.npz
runs/buffet_brscale/per5/: solver_config.py
runs/buffet_brscale/per5/npzfiles/: run_config.npz
runs/mathieu_brscale/per10/npzfiles/: modes.npz  run_config.npz
runs/mathieu_brscale/per15/: solver_config.py
runs/mathieu_brscale/per15/npzfiles/: modes.npz  run_config.npz
runs/mathieu_brscale/per200/: solver_config.py
runs/mathieu_brscale/per200/npzfiles/: modes.npz  run_config.npz
runs/mathieu_brscale/per5/npzfiles/: modes.npz  run_config.npz
runs/scan_test/: save_plots.py  solver_config.py
runs/scan_test/npzfiles/: modes.npz  run_config.npz
runs/template_run/: solver_config.py
runs/test_dir/npzfiles/: modes.npz  run_params.npz
scripts/: compute_modes.py  init_run.py
src/macmodes/: config.py  constants.py
src/macmodes/analysis/: plotting.py
src/macmodes/io/: load.py  save.py
src/macmodes/modes/: grids.py  matrices.py  matrices.txt  physics.py  solver.py  solver.txt
src/macmodes/scripts/: build_config.py  compute_modes.py  mode_look.py  new_run.py
tests/: config.npz  config_test.py  ex9.py  import_test.py  mpi.py  mumps.py  numpy2petsc.py  save.py  setup_mats_test.py  slepc_matlab.py  test.npz
